# optimus

./: .dockerignore  .flake8  .gitignore  Dockerfile  INIT  Makefile  README.md  boot.sh  build_install.sh  dns_packet.py  dns_parser.py  dns_records.py  docker-compose.yml  init  network.py  optimus.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run  script.py  server.py  setup.py
.github/workflows/: build.yaml
bin_data_reader/: bin_reader.py
cli/: optimus.py
dns/: dns_packet.py  dns_parser.py  handlers.py
logging/: logger.py
logging_utils/: logger.py
networking/: udp.py  udp_utils.py
optimus/: __version__.py  prometheus.py  root_servers.json  utils.py
optimus/bin_data_reader/: bin_reader.py
optimus/cli/: optimus.py
optimus/dns/: dns_packet.py  dns_parser.py  dns_records.py  handlers.py  resolver.py
optimus/dns/models/: packet.py  records.py
optimus/dns/parser/: iter.py  parse.py
optimus/iterator/: iter.py
optimus/logging/: logger.py
optimus/logging_config/: logger.py
optimus/networking/: cache.py  udp.py  udp_utils.py
optimus/optimus_server/: router.py  server.py  udp.py  udp_listener.py
optimus/server/: context.py  router.py  udp_listener.py
optimus/tests/: test_parser.py
optimus_server/: handlers.py  server.py
reader/: bin_reader.py
tests/: test_parser.py
utils/: parser.py  parsing_utils.py
version/: __version__.py
