[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    'build',  # TOML literal string (single-quotes, no escaping necessary)
    '^\..*',  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.black]
line-length = 120
target-version = ['py39']

